# latent.foundation

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  index.html  justfile  wrangler.jsonc
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
archive/: index.html
docs/: architecture.md  deployment.md  design-system.md  development.md
src/: app.rs  data.rs  main.rs  theme.rs
src/components/: footer.rs  header.rs  mod.rs  project_row.rs
src/views/: about.rs  home.rs  mod.rs  project_detail.rs  projects.rs
style/: app.css  site.css
