[package]
name = "latent"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.19", features = ["csr"] }
leptos_router = { version = "0.8" }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Storage"] }
js-sys = "0.3"
# Shared latent. UI — path dep for local dev; swap to a git tag for production:
latent-ui = { git = "https://github.com/latent-foundation/latent-ui", tag = "v0.1.0" }
